# ProVANT-Simulator

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md  ROADMAP.md  build.sh  install.sh  output.txt
provant_simulator_cmake/: .cmake-format.yaml  CMakeLists.txt  package.xml
provant_simulator_cmake/cmake/: conan.cmake  debug_targets.cmake  dump_variables.cmake  provant_simulator_cmake-extras.cmake.develspace.in  provant_simulator_cmake-extras.cmake.installspace.in
provant_simulator_cmake/cmake/Modules/: FindCPLEX.cmake
provant_simulator_plugins/provant_simulator_camera_plugins/: CMakeLists.txt  conanfile.txt  package.xml
provant_simulator_plugins/provant_simulator_camera_plugins/src/camera_recorder/: camera_recorder.cpp  recorder_options_parser.cpp
provant_simulator_plugins/provant_simulator_camera_plugins/src/camera_sync_publisher/: camera_sync_publisher.cpp
provant_simulator_plugins/provant_simulator_camera_plugins/src/camera_sync_recorder/: camera_sync_recorder.cpp
provant_simulator_plugins/provant_simulator_camera_plugins/src/sync_camera_manager/: sync_camera_manager.cpp
provant_simulator_plugins/provant_simulator_camera_plugins/src/user_camera_follower/: user_camera_follower.cpp
provant_simulator_plugins/provant_simulator_camera_plugins/src/user_camera_sync_recorder/: user_camera_sync_recorder.cpp  user_camera_sync_recorder.h
provant_simulator_plugins/provant_simulator_gui_plugins/: CMakeLists.txt  README.md  conan.txt  package.xml
provant_simulator_plugins/provant_simulator_gui_plugins/src/auto_stepping/: auto_stepping.cpp  auto_stepping.h  resources.qrc
provant_simulator_plugins/provant_simulator_gui_plugins/src/grid_ctrl/: grid_ctrl.cpp  grid_ctrl.h  sdf_example.xml
provant_simulator_plugins/provant_simulator_plugins/: CMakeLists.txt  package.xml
provant_simulator_plugins/provant_simulator_plugins/src/config_plugin/: config_plugin.cpp
provant_simulator_plugins/provant_simulator_plugins/src/external_forces_sensor/: external_forces_sensor.cpp  external_forces_sensor_ros.cpp
provant_simulator_plugins/provant_simulator_plugins/src/lidar_closest_detection_plugin/: closest_point_finder.cpp  lidar_closest_obj_ros.cpp
provant_simulator_plugins/provant_simulator_plugins/src/pose_sensor/: pose_sensor.cpp
provant_simulator_plugins/provant_simulator_plugins/src/position_logger_plugin/: position_logger.cpp
provant_simulator_plugins/provant_simulator_plugins/src/step_service/: step_service.cpp
provant_simulator_test_models/: CMakeLists.txt  package.xml
provant_simulator_tests/provant_gz_sphere_tests/: CMakeLists.txt  package.xml
provant_simulator_tests/provant_gz_sphere_tests/launch/: spheres_base.launch  spheres_bullet.launch  spheres_dart.launch  spheres_ode.launch  spheres_simbody.launch
provant_simulator_tests/provant_gz_sphere_tests/src/apply_force_multiple/: apply_force_multiple.cpp
provant_simulator_tests/provant_gz_sphere_tests/src/apply_force_once/: apply_force_once.cpp
provant_simulator_tests/provant_gz_sphere_tests/src/set_force/: set_force.cpp
provant_simulator_tests/provant_gz_sphere_tests/src/set_force_once/: set_force_once.cpp
provant_simulator_tests/provant_gz_sphere_tests/worlds/: bullet_world.world  dart_world.world  ode_world.world  simbody_world.world
provant_simulator_tests/provant_simulator_gazebo_mocks/: CMakeLists.txt  package.xml
provant_simulator_tests/provant_simulator_gazebo_mocks/src/: MockJoint.cpp  MockLink.cpp
provant_simulator_utils/provant_simulator_csv_writer/: CMakeLists.txt  package.xml
provant_simulator_utils/provant_simulator_csv_writer/src/: csv_writer.cpp
provant_simulator_utils/provant_simulator_csv_writer/tests/: csvfilewritertests.hpp  csvoptionstests.hpp  csvwritertests.hpp  tests_main.cpp
provant_simulator_utils/provant_simulator_gzconfig_reader/: CMakeLists.txt  README.md  package.xml
provant_simulator_utils/provant_simulator_gzconfig_reader/src/: gzconfig_reader.cpp
provant_simulator_utils/provant_simulator_log_utils/: CMakeLists.txt  README.md  conanfile.txt  package.xml
provant_simulator_utils/provant_simulator_log_utils/launch/: logtestplugin.launch
provant_simulator_utils/provant_simulator_log_utils/worlds/: logtest.world
provant_simulator_utils/provant_simulator_math_utils/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
provant_simulator_utils/provant_simulator_math_utils/src/: integrator.cpp  saturator.cpp
provant_simulator_utils/provant_simulator_math_utils/tests/: integrator_test.cpp  saturator_test.cpp
provant_simulator_utils/provant_simulator_parser_utils/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
provant_simulator_utils/provant_simulator_parser_utils/src/: type_conversion.cpp
provant_simulator_utils/provant_simulator_parser_utils/tests/: type_conversion_test.cpp
provant_simulator_utils/provant_simulator_resource_compiler/: CMakeLists.txt  package.xml
provant_simulator_utils/provant_simulator_resource_compiler/cmake/: cmakerc.cmake
provant_simulator_utils/provant_simulator_resource_compiler/tests/: main.cpp
provant_simulator_utils/provant_simulator_sdf_parser/: CMakeLists.txt  README.md  package.xml
provant_simulator_utils/provant_simulator_sdf_parser/src/: sdf_parser.cpp  sdf_status.cpp
provant_simulator_utils/provant_simulator_sdf_parser/tests/: sdf_reader_test.cpp  sdf_status_tests.cpp
provant_simulator_utils/provant_simulator_xml_reader/: CMakeLists.txt  package.xml
provant_simulator_utils/provant_simulator_xml_reader/src/: config_reader.cpp
provant_simulator_utils/provant_simulator_xml_reader/tests/: config_reader_test.cpp
source/Database/: CMakeLists.txt  package.xml  teste3.world
source/Database/Instrumentation/: GpsToROS.txt  Imu.txt  MagToROS.txt  Tiltempuxo.txt  gps.txt
source/Database/launch/: empty_world.launch  gazebo.launch  gazebo_only.launch  hil.launch  rviz.launch  slam.launch  spawn.launch  teste.launch
source/Database/models/box/: model.config
source/Database/urdf/: CMakeLists.txt  package.xml  quadcopter.urdf
source/Structure/Controller/: CMakeLists.txt  package.xml
(+1289 files in other folders)
