<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https: //github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
-->
<package format="2">
  <name>provant_simulator_camera_plugins</name>
  <version>0.1.0</version>
  <description>
    <p>This package contains a collection of Gazebo plugins created to
    add capabilities related to the recording of cameras.</p>
    <p>The most notable feature provided by the plugins in this package is the
      creation of videos synchronized by the simulation steps.</p>
  </description>

  <maintainer email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</maintainer>

  <license>MIT</license>

  <url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
  <url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
  <url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

  <author email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>provant_simulator_log_utils</depend>
  <depend>provant_simulator_sdf_parser</depend>
  <depend>spdlog</depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>provant_simulator_cmake</build_depend>

  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <test_depend>rosunit</test_depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../../../devel/lib" />
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>