<?xml version="1.0" encoding="UTF-8"?>
<!-- 
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https://github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
 -->
<package format="2">
  <name>provant_simulator_gazebo_mocks</name>
  <version>0.1.0</version>
  <description>
    <p>The provant_simulator_gazebo_mocks package.</p>
  </description>

  <maintainer email="opdpires@ufmg.br">Pedro Otávio Fonseca Pires</maintainer>

  <license>MIT</license>

  <url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
  <url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
  <url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

  <author email="opdpires@ufmg.br">Pedro Otávio Fonseca Pires</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>rosunit</depend>

  <!-- <doc_depend>doxygen</doc_depend> -->
  <!-- <doc_depend>rosdoc_lite</doc_depend> -->

  <export>
    <!-- <rosdoc config="rosdoc.yaml"/> -->
  </export>
</package>